--- a/overlays/emea/kustomization.yaml
+++ b/overlays/emea/kustomization.yaml
@@ -3,3 +3,7 @@ bases:
   - ../../base
 resources:
 nameSuffix: -emea
+images:
+  - name: mysql
+    newName: registry.redhat.io/rhel8/mysql-80
+    newTag: 1-156
